# FigmaBlueprints

./: package-lock.json
backend/: config.py
backend/routes/: generate_code.py
frontend/src/components/settings/: SettingsDialog.tsx
synthesizer-teacher/: .gitignore  pyproject.toml
synthesizer-teacher/datagen/: __init__.py  __main__.py  cli.py  config.py  lfo_shapes.py  pipeline.py  preview.py
synthesizer-teacher/datagen/params/: __init__.py  breeder.py  importance.py  normalize.py  registry.py  sampler.py
synthesizer-teacher/datagen/render/: __init__.py  engine.py  pool.py  validator.py
synthesizer-teacher/datagen/storage/: __init__.py  reader.py  schema.py  writer.py
synthesizer-teacher/datagen/wavetables/: __init__.py  catalog.py  discovery.py
synthesizer-teacher/inference/: __init__.py  __main__.py  cli.py  cma_optimizer.py  demo.py  pipeline.py  tutorial.py
synthesizer-teacher/research/: 0-goal.md  1-claude-initial-research.md  1-claude-vital-inverse-synthesis-report.md  10-tier3-full-parameter-estimation.md  11-tier3-training-guide.md  2-claude-initial-research.md  2-claude-vital-inverse-synthesis-report.md  3-datagen-pipeline-plan.md  3-datagen-progress-report.md  4-tier1-training-report.md  5-status-report.md  6-changes-report.md  7-audit-fixes-report.md  8-bugfixes-and-cmaes-report.md  9-vita-data-format.md
synthesizer-teacher/training/: __init__.py  __main__.py  cli.py  config.py  dataset.py  distributed.py  encoders.py  eval_tui.py  evaluate.py  hungarian.py  loss.py  model.py  modulation_decoder.py  trainer.py
